refactor, use java 8 streams instead of guava